--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "vscode": "^1.99.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/princegupta-dev/Joi-schema-generator.git"
+  },
   "categories": [
     "Other"
   ],
