--- a/package.json
+++ b/package.json
@@ -48,5 +48,15 @@
     "webpack-cli": "^6.0.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1"
-  }
+  },
+  "keywords": [
+    "joi",
+    "schema",
+    "sequelize",
+    "json",
+    "postman",
+    "typescript",
+    "validation",
+    "vscode"
+  ]
 }
